tests/errmsgs/twrongcolon.nim
discard """
errormsg: "in expression ' do:"
nimout: '''
  890': identifier expected, but found ''
'''

line: 10
"""

var n: int : 890
